# docs/swagger.json
@@ -13,7 +13,7 @@
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "0.4.96"
+        "version": "0.4.109"
     },
     "host": "localhost:9999",
     "basePath": "/api/v1",
@@ -28,26 +28,6 @@
                     "p2p"
                 ],
                 "summary": "Return a dump of the dht",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/kad-dht": {
-            "get": {
-                "description": "Returns entire Kademlia DHT content",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "p2p"
-                ],
-                "summary": "Return a dump of the Kademlia dht",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -92,10 +72,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Metadata"
-                            }
+                            "$ref": "#/definitions/models.Metadata"
                         }
                     }
                 }
@@ -115,10 +92,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Metadata"
-                            }
+                            "$ref": "#/definitions/models.Metadata"
                         }
                     }
                 }
@@ -157,10 +131,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Metadata"
-                            }
+                            "$ref": "#/definitions/models.Metadata"
                         }
                     }
                 }
@@ -339,6 +310,9 @@
         "/run/deploy": {
             "get": {
                 "description": "Loads deployment request from the DB after a successful blockchain transaction has been made and passes it to compute provider.",
+                "tags": [
+                    "run"
+                ],
                 "summary": "Websocket endpoint responsible for sending deployment request and receiving deployment response.",
                 "responses": {
                     "200": {
@@ -353,19 +327,54 @@
         "/run/request-reward": {
             "post": {
                 "description": "HandleRequestReward takes request from the compute provider, talks with Oracle and releases tokens if conditions are met.",
+                "tags": [
+                    "run"
+                ],
                 "summary": "Get NTX tokens for work done.",
-                "responses": {}
+                "parameters": [
+                    {
+                        "description": "Claim Reward Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/tokenomics.ClaimCardanoTokenBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/tokenomics.rewardRespToCPD"
+                        }
+                    }
+                }
             }
         },
         "/run/request-service": {
             "post": {
                 "description": "HandleRequestService searches the DHT for non-busy, available devices with appropriate metadata. Then informs parameters related to blockchain to request to run a service on NuNet.",
+                "tags": [
+                    "run"
+                ],
                 "summary": "Informs parameters related to blockchain to request to run a service on NuNet",
+                "parameters": [
+                    {
+                        "description": "Deployment Request",
+                        "name": "deployment_request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.DeploymentRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/machines.fundingRespToSPD"
                         }
                     }
                 }
@@ -374,7 +383,21 @@
         "/run/send-status": {
             "post": {
                 "description": "HandleSendStatus is used by webapps to send status of blockchain activities. Such as if tokens have been put in escrow account and account creation.",
+                "tags": [
+                    "run"
+                ],
                 "summary": "Sends blockchain status of contract creation.",
+                "parameters": [
+                    {
+                        "description": "Blockchain Transaction Status Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/machines.BlockchainTxStatus"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -438,6 +461,34 @@
         }
     },
     "definitions": {
+        "machines.BlockchainTxStatus": {
+            "type": "object",
+            "properties": {
+                "transaction_status": {
+                    "type": "string"
+                },
+                "transaction_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "machines.fundingRespToSPD": {
+            "type": "object",
+            "properties": {
+                "compute_provider_addr": {
+                    "type": "string"
+                },
+                "estimated_price": {
+                    "type": "number"
+                },
+                "oracle_message": {
+                    "type": "string"
+                },
+                "signature": {
+                    "type": "string"
+                }
+            }
+        },
         "models.BlockchainAddressPrivKey": {
             "type": "object",
             "properties": {
@@ -449,6 +500,103 @@
                 },
                 "private_key": {
                     "type": "string"
+                }
+            }
+        },
+        "models.DeploymentRequest": {
+            "type": "object",
+            "properties": {
+                "address_user": {
+                    "description": "service provider wallet address",
+                    "type": "string"
+                },
+                "blockchain": {
+                    "type": "string"
+                },
+                "constraints": {
+                    "type": "object",
+                    "properties": {
+                        "complexity": {
+                            "type": "string"
+                        },
+                        "cpu": {
+                            "type": "integer"
+                        },
+                        "power": {
+                            "type": "integer"
+                        },
+                        "ram": {
+                            "type": "integer"
+                        },
+                        "time": {
+                            "type": "integer"
+                        },
+                        "vram": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "max_ntx": {
+                    "type": "integer"
+                },
+                "params": {
+                    "type": "object",
+                    "properties": {
+                        "image_id": {
+                            "type": "string"
+                        },
+                        "local_node_id": {
+                            "description": "NodeID of service provider (machine triggering the job)",
+                            "type": "string"
+                        },
+                        "local_public_key": {
+                            "description": "Public key of service provider",
+                            "type": "string"
+                        },
+                        "machine_type": {
+                            "type": "string"
+                        },
+                        "model_url": {
+                            "type": "string"
+                        },
+                        "node_id": {
+                            "description": "NodeID of compute provider (machine to deploy the job on)",
+                            "type": "string"
+                        },
+                        "packages": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        },
+                        "public_key": {
+                            "description": "Public key of compute provider",
+                            "type": "string"
+                        }
+                    }
+                },
+                "service_type": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "string"
+                },
+                "traceinfo": {
+                    "type": "object",
+                    "properties": {
+                        "span_id": {
+                            "type": "string"
+                        },
+                        "trace_flags": {
+                            "type": "string"
+                        },
+                        "trace_id": {
+                            "type": "string"
+                        },
+                        "trace_state": {
+                            "type": "string"
+                        }
+                    }
                 }
             }
         },
@@ -519,6 +667,28 @@
                 },
                 "total_cores": {
                     "type": "integer"
+                }
+            }
+        },
+        "tokenomics.ClaimCardanoTokenBody": {
+            "type": "object",
+            "properties": {
+                "compute_provider_address": {
+                    "type": "string"
+                }
+            }
+        },
+        "tokenomics.rewardRespToCPD": {
+            "type": "object",
+            "properties": {
+                "oracle_message": {
+                    "type": "string"
+                },
+                "reward_type": {
+                    "type": "string"
+                },
+                "signature": {
+                    "type": "string"
                 }
             }
         }
